[package]
name = "graby"
version = "0.1.0"
edition = "2021"
authors = ["Raghav <raghavsingla327@gmail.com>"]
license = "MIT"
description = "Search and print matching patterns in given file."
readme = "README.md"
documentation = "https://docs.rs/graby/0.1.0/graby/"
homepage = "https://github.com/Raghav-Bell/graby"
repository = "https://github.com/Raghav-Bell/graby"
keywords = ["cli", "search", "graby","grep"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
anyhow = "1.0"
